fix: increase contrast to improve accessibility

--- a/litreview/static/css/base.css
+++ b/litreview/static/css/base.css
@@ -1,6 +1,6 @@
 :root {
     --darkest-color: #2A282A;
-    --medium-dark-color: #A18B7D;
+    --medium-dark-color: #7a6658;
     --medium-light-color: #CCC2B8;
     --background-color: #EBEAEB;
     --lightest-color: white;
